--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,10 +3,10 @@ name: pipeline
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-        - master
+        - main
 
 jobs:
   eslint:
