--- a/.github/workflows/pipeline-manual.yml
+++ b/.github/workflows/pipeline-manual.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run end-to-end tests on desktop viewport 🧪
         uses: cypress-io/github-action@v5
         env:
-          CYPRESS_USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
+          USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
         with:
           record: true
