--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:fix": "eslint cypress/**/*.js --fix && eslint cypress.config.js --fix",
     "cy:open": "cypress open",
     "test": "cypress run",
-    "test:cloud": "cypress run --record --tag 'desktop'"
+    "test:cloud": "cypress run --record"
   },
   "keywords": [],
   "author": "",
